--- a/css/home.css
+++ b/css/home.css
@@ -1,12 +1,12 @@
 /* Header content */
 
 .header__content{
-    margin-top: 7rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%); 
     text-align: center;
+    padding-bottom: 20px;
 }
 
 .header__title{
@@ -40,4 +40,33 @@ span{
 
 .btn:hover{
     border-top-right-radius: 3rem;
+}
+
+@media screen and (max-width: 859px){
+    .header__title{
+        font-size: var(--fs-5xl);
+    }
+    
+    .header__subtitle{
+        font-size: var(--fs-xl);
+    }
+
+    .btn{
+        font-size: var(--fs-base);
+    }
+}
+
+@media screen and (max-width: 620px){
+
+    .header__title{
+        font-size: var(--fs-4xl);
+    }
+    
+    .header__subtitle{
+        font-size: var(--fs-base);
+    }
+
+    .btn{
+        font-size: var(--fs-xs);
+    }
 }
